# HaskellDemo

./: .gitignore  ADR-MAPPING.md  ARCHITECTURE-NOTES.md  CHANGELOG.md  CONTRIBUTING.md  HaskellDemo.cabal  LICENSE  README.md  mkdocs.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: config.yml  repo-improvement.md  triad-idea.md
.github/workflows/: ci.yml  docs.yml  pages.yml  release.yml
.run/: HaskellDemo - build.run.xml  HaskellDemo - repl.run.xml  HaskellDemo - run.run.xml  HaskellDemo - test.run.xml
app/: Main.hs
app/App/: ComparisonRunner.hs  SampleData.hs  TerminalOutput.hs
docs/: .gitignore  contributing.md  getting-started.md  index.md  runnable-comparisons.md
docs/architecture/: comparing-with-csharp.md  learning-path.md  release-checklist.md
docs/triads/: configuration-startup.md  end-to-end-registration.md  password-reset.md  propose-a-triad.md  retry-backoff.md
scripts/: generate-runnable-comparisons.py
src/Baseline/: AsyncPipeline.hs  AsyncWorkflow.hs  BatchSessionWorkflow.hs  EffectsBoundary.hs  FeatureConfigurationStartup.hs  FeaturePasswordReset.hs  FeatureRegistration.hs  OptionLike.hs  ReaderWorkflow.hs  RegistrationWorkflow.hs  RetryBackoff.hs  SessionWorkflow.hs  StateWorkflow.hs  StreamingNumbers.hs  ValidationAccumulation.hs  ValidationFlow.hs
src/HaskellStyle/: AsyncPipeline.hs  AsyncWorkflow.hs  BatchSessionWorkflow.hs  EffectsBoundary.hs  EitherValidation.hs  FeatureConfigurationStartup.hs  FeaturePasswordReset.hs  FeatureRegistration.hs  MaybePipeline.hs  ReaderWorkflow.hs  RegistrationWorkflow.hs  RetryBackoff.hs  SessionWorkflow.hs  StateMonadWorkflow.hs  StateWorkflow.hs  StreamingNumbers.hs  ValidationAccumulation.hs
src/Shared/: AppEnvironment.hs  AsyncPipeline.hs  AsyncWorkflow.hs  BatchSessionWorkflow.hs  CounterState.hs  FeatureConfigurationStartup.hs  FeaturePasswordReset.hs  FeatureRegistration.hs  GreetingStore.hs  Person.hs  Registration.hs  RetryBackoff.hs  SessionWorkflow.hs  StreamingNumbers.hs
test/: Spec.hs
